[package]
name = "block-icmp-bpf"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = "1.3"
redbpf-probes = "1.3"
clap = "2"
ctrlc = "3.1.9"

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, features = ["build"] }
